# airflow-dags

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  renovate.json
dags/: discord_test_message.py  example_dag.py  stockcharts_discord_alerts.py
dags/massive/: __init__.py  client.py  dag_backfill.py  dag_daily_etl.py  dag_universe.py  db.py  spot_check.py  sql.py
